# tudu

./: .editorconfig  .gitignore  .pre-commit-config.yaml  LICENSE  PRD.md  README.md  RFC.md
repo/: app.py  main.js
scripts/: setup.sh
tudu/: .tudu.yaml  Cargo.toml
tudu/src/: lib.rs  main.rs
tudu/src/providers/: mod.rs  notion.rs
tudu/tests/: cli.rs
tudu/tests/fixtures/repo/: ignore.py  index.html  test.rs
tudu/tests/snapshots/: cli__run_default.snap  cli__run_verbose.snap
