[package]
name = "tudu"
version = "0.1.0"
edition = "2024"

[dependencies]
regex = "1.10"
ignore = "0.4"
walkdir = "2.0"
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
async-trait = "0.1"
dotenvy = "0.15"

[dev-dependencies]
insta = { version = "1.39.0", features = ["glob"] }
assert_cmd = "2.0"
